# llm-android

./: .gitignore  .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  logging.h
app/src/main/java/com/localllm/app/: LocalLLMApp.kt
app/src/main/java/com/localllm/app/data/: AppContainer.kt  AppSettings.kt  AssetExtractor.kt
app/src/main/java/com/localllm/app/data/chat/: ChatRepository.kt  Dtos.kt
app/src/main/java/com/localllm/app/data/db/: AppDatabase.kt  Daos.kt  Entities.kt
app/src/main/java/com/localllm/app/llama/: LLMEngine.kt  LlamaServerConfig.kt  LlamaServerManager.kt  LlamaServerService.kt
app/src/main/java/com/localllm/app/ui/: MainActivity.kt  Nav.kt
app/src/main/java/com/localllm/app/ui/chat/: ChatScreen.kt  ChatViewModel.kt
app/src/main/java/com/localllm/app/ui/settings/: SettingsScreen.kt  SettingsViewModel.kt
app/src/main/java/com/localllm/app/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
scripts/: build_llama_android.sh  download_models.sh
